--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
         <h4>Green Energy</h4>
         <p class="font_color">Green energy is energy that can be produced using a method, and from a source, that causes
           no harm to the natural environment.</p>
-        <input class="btn_styel" type="button" value="Learn More">
+        <input class="btn_styel bg_1 " type="button" value="Learn More">
       </div>
       <div class="card_3">
         <img src="./assets/card-icon.png" alt="">
         <h4>Modern Infrastructure</h4>
         <p class="font_color">The basic facilities such as transport, communications, power supplies, and buildings,
           which enable it to function.</p>
-        <input class="btn_styel" type="button" value="Learn More">
+        <input class="btn_styel bg_2" type="button" value="Learn More">
       </div>
     </div>
   </section>
@@ -111,9 +111,10 @@
       <h4>Select Your Opinion</h4>
     </div>
    </section>
+   <!-- recent news section start -->
    <section class="recent_news">
     <h3>Recent News</h3>
-    <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+    <p class="font_color">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
     <div class="bangladesh_satellite">
       <img class="satelite_img" src="./assets/satelite.png" alt="">
       <div class="bangladesh_discription">
@@ -137,8 +138,30 @@
     </div>
     <img class="satelite_img" src="./assets/satelite.png" alt="">
     </div>
-   
    </section>
+    <!-- recent news section end -->
+     <!--donate section start-->
+   <section class="donate_section">
+    <h3>Donate Today</h3>
+    <p class="font_color">By contributing to BLAST, you enable us to conduct training programs, empowering lawyers, law graduates, and legal service providers in pro bono lawyering and legal aid. Together, we engage a diverse network of lawyers, academics, policymakers, and human rights experts, creating an unbreakable chain of support from the local level to the global stage.</p>
+    <div class="donate_today">
+      <div class="donate_amiint">100 Taka</div>
+      <div class="donate_amiint bg">200 Taka</div>
+      <div class="donate_amiint">500 Taka</div>
+      <div class="donate_amiint">1000 Taka</div>
+    </div>
+    <input class="donate_section_input" type="text" placeholder="Other Amount (Taka)"><br>
+    <input class="btn_styel" type="button" value="Donet Now">
+   </section>
+   <!--Donate section end-->
+   <!-- Subscribe section start -->
+    <section class="subscribe">
+      <h3>Subscribe Newsletter</h3>
+      <p class="font_color">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+      <input type="email" placeholder="Enter your email here"  >
+      <p class="font_color">We promise not to spam you!</p>
+
+    </section>
 
 </body>
 
