--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bangladesh 2.0</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+    rel="stylesheet">
   <link rel="shortcut icon" href="./assets/favcon/flag.png" type="image/x-icon">
   <link rel="stylesheet" href="style/style.css">
 </head>
@@ -101,30 +105,23 @@
     </section>
     <!-- vision section end -->
 
-    
-    <section class="section_444">
-      <div class="img_4444">
+    <!-- muhammad yunus section start -->
+    <section class="muhammad_yunus">
 
+      <div class="muhammad_yunus_discription">
+
+        <p class="font_color">
+          "Following the overthrow of Sheikh Hasina, President Mohammed Shahabuddin gave Yunus a mandate to form an
+          interim government, acceding to calls from student leaders for his appointment. His government has appointed a
+          Constitutional Reform Commission to draft a revision to the Constitution of Bangladesh and has pledged the
+          convocation of a constituent assembly"
+        </p>
+        <h3>Dr. Muhammad Yunus</h3>
+        <p class="font_color">Chief Adviser of the People's Republic of Bangladesh</p>
       </div>
-      <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt
-        optio
-        id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit
-        vel
-        minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab
-        aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur,
-        dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
-      <h3>Dr. Muhammad Yunus</h3>
-      <p>Chief Adviser of the People's Republic of Bangladesh</p>
+
     </section>
-    <!-- Opinion section start -->
-    <section>
-      <h3>Your Opinion Matters</h3>
-      <div class="">
-        <h4>Questions</h4>
-        <h4>Select Your Opinion</h4>
-      </div>
-    </section>
-    <!-- Opinion section  end -->
+    <!-- muhammad yunus section end -->
 
     <!-- recent news section start -->
     <section class="recent_news">
@@ -190,8 +187,8 @@
         <h3>Subscribe Newsletter</h3>
         <p class="font_color">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge
           technology, promoting inclusive growth.</p>
-        <input type="email" placeholder="Enter your email here">
-        <input type="button" value="Subscribe">
+        <input class="subscribe_email" type="email" placeholder="Enter your email here">
+        <input class="subscribe_subscribe" type="button" value="Subscribe">
         <p class="font_color">We promise not to spam you!</p>
       </div>
     </section>
